--- a/dispatcher_application/templates/navbar_superuser.html
+++ b/dispatcher_application/templates/navbar_superuser.html
@@ -29,26 +29,12 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-5 col-md-2 col-sm-1 col-4 p-1">
-                <i class="bi bi-person-fill btn btn-lg" style="font-size: 1.6rem;"></i>
-                <i class="bi bi-plus-lg btn btn-lg" style="font-size: 1.6rem;"></i>
+            <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1">
+                <i class="bi bi-person-fill btn btn-lg" style="font-size: 1.8rem;"></i>
+				<i class="bi bi-person-plus-fill btn btn-lg" style="font-size: 1.8rem;"></i>
+				<i class="bi bi-people btn btn-lg" style="font-size: 1.8rem;"></i>
+				<i class="bi bi-person-plus btn btn-lg" style="font-size: 1.8rem;"></i>
             </div>
-			<div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
-                <label for="data">Only my data</label>
-                <input type="checkbox" name="data" id="data">
-            </div>
-            <div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
-                <label for="from">From:</label>
-                <input type="text" name="from" id="from" size="2">
-            </div>
-            <div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
-				<label for="from">Date:</label>
-                <input type="date">
-            </div>
-            <div class="col-xl-1 col-md-1 col-sm-1 col-2 p-3">
-                <i class="bi bi-search btn btn-lg"></i>
-            </div>
-
         </div>
     </div>
 
@@ -56,15 +42,14 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 
+    
+    {% block content %}
+        
+
+
 
     
-        {% block content %}
-        
-
-
-
-        
-        {% endblock  %}
+    {% endblock  %}
 </body>
 
 </html>
