--- a/dispatcher_application/templates/base_template.html
+++ b/dispatcher_application/templates/base_template.html
@@ -4,8 +4,10 @@
     <meta charset='utf-8'>
     <title>{% block title %}{% endblock %}</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main_style.css' %}">
     
     {% block static_imports %}
         
@@ -21,7 +23,7 @@
     <div class="container">
         {% block content %} 
         
-        {% endblock %} 
+        {% endblock %}
     </div>
 
 </body>
