--- a/dispatcher_application/templates/base_template.html
+++ b/dispatcher_application/templates/base_template.html
@@ -4,6 +4,8 @@
     <meta charset='utf-8'>
     <title>{% block title %}{% endblock %}</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     
@@ -15,8 +17,6 @@
 
 
 <body>
-
-    {% include './navbar.html' %}
     
     <div class="container">
         {% block content %} 
