--- a/dispatcher_application/templates/logo_panel.html
+++ b/dispatcher_application/templates/logo_panel.html
@@ -1,8 +1,12 @@
-<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="navbar_style.css">
-    <title>Title</title>
+<div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 col-3">
+                <img src="https://www.cevalogistics.com/images/ratio_267_x_large_picture/CEVA_Logo_LR-500-242.jpeg" alt="" height="64">
+            </div>
+            <div class="col-md-9 col-6 modra">
+            </div>
+            <div class="col-md-1 col-2 cervena">
+            </div>
+        </div>
+
+</div>
