--- a/dispatcher_application/templates/navbar.html
+++ b/dispatcher_application/templates/navbar.html
@@ -1,70 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base_template.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="navbar_style.css">
-    <title>Title</title>
-
-    <style>
-        .modra {
-            background-color: #021D49;
-            padding: 0%;
-        }
-        
-        .cervena {
-            background-color: #E1261C;
-            padding: 0%;
-        }
-    </style>
-</head>
-
-<body>
-    {% include "./logo_panel.html" %}
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-5 col-md-2 col-sm-1 col-4 p-1">
-                <i class="bi bi-person-fill btn btn-lg" style="font-size: 1.6rem;"></i>
-                <i class="bi bi-plus-lg btn btn-lg" style="font-size: 1.6rem;"></i>
-            </div>
-			<div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
-                <label for="data">Only my data</label>
-                <input type="checkbox" name="data" id="data">
-            </div>
-            <div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
-                <label for="from">From:</label>
-                <input type="text" name="from" id="from" size="2">
-            </div>
-            <div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
-				<label for="from">Date:</label>
-                <input type="date">
-            </div>
-            <div class="col-xl-1 col-md-1 col-sm-1 col-2 p-3">
-                <i class="bi bi-search btn btn-lg"></i>
-            </div>
-
+{% block  "navbar_content" %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xl-5 col-md-2 col-sm-1 col-4 p-1">
+            <i class="bi bi-person-fill btn btn-lg" style="font-size: 1.6rem;"></i>
+            <i class="bi bi-plus-lg btn btn-lg" style="font-size: 1.6rem;"></i>
         </div>
+        <div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
+            <label for="data">Only my data</label>
+            <input type="checkbox" name="data" id="data">
+        </div>
+        <div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
+            <label for="from">From:</label>
+            <input type="text" name="from" id="from" size="2">
+        </div>
+        <div class="col-xl-2 col-md-2 col-sm-1 col-4 p-3">
+            <label for="from">Date:</label>
+            <input type="date">
+        </div>
+        <div class="col-xl-1 col-md-1 col-sm-1 col-2 p-3">
+            <i class="bi bi-search btn btn-lg"></i>
+        </div>
+
     </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-
-
-    
-        {% block content %}
-        
-
-
-
-        
-        {% endblock  %}
-</body>
-
-</html>
+{% endblock  %}
