ulozenie templates branche

--- a/dispatcher_application/group_management/templates/group_add.html
+++ b/dispatcher_application/group_management/templates/group_add.html
@@ -62,7 +62,7 @@
         <div class="form-group row">
             <div class="col-sm-7"></div>
             <div class="col-sm-5">
-            <button type="submit" class="btn btn-primary">Add group</button>
+            <button type="submit" class="btn btn-primary" href="">Add group</button>
         </div>
         </div>
     </form>
