--- a/dispatcher_application/authentication/templates/authentication/login.html
+++ b/dispatcher_application/authentication/templates/authentication/login.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="input-box">
-            <input type="password" name="password" = placeholder="Password" id="password-field" required>
+            <input type="password" name="password" placeholder="Password" id="password-field" required>
         </div>
 
         <div>
