--- a/dispatcher_application/branch_management/templates/branch_management/branch_list.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_list.html
@@ -10,6 +10,7 @@
             <th>ID</th>
             <th>Name</th>
             <th>Edit</th>
+            <th>Manage</th>
             <th>Delete</th>
         </tr>
         {% for branch in object_list %}
@@ -18,6 +19,9 @@
                 <td>{{ branch.name }}</td>
                 <td>
                     <a class="" href="{% url 'branch-update' branch.id %}"><i class="bi bi-pencil-square"></i></a>
+                </td>
+                <td>
+                    <a class="" href="{% url 'branch-access' branch.id %}"><i class="bi bi-gear"></i></a>
                 </td>
                 <td>
                     <a class="" href="{% url 'branch-delete' branch.id %}"><i class="bi bi-x-lg"></i></a>
