--- a/dispatcher_application/branch_management/templates/branch_management/branch_access.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_access.html
@@ -17,7 +17,7 @@
             <tr>
                 <td>{{ user.email }}</td>
                 <td>
-                    {% comment %} <a class="" href="{% url 'branch-access-remove' branch.id user.id %}"><i class="bi bi-x-lg"></i></a> {% endcomment %}
+                    <a class="" href="{% url 'branch-access-delete' branch.id user.id %}"><i class="bi bi-x-lg"></i></a>
                 </td>
             </tr>
         {% endfor %}
