--- a/dispatcher_application/branch_management/templates/branch_management/branch_access_add.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_access_add.html
@@ -3,7 +3,8 @@
 {% block title %}Add access{% endblock %}
 
 {% block content %}
-    <h1>Add access {{ branch.name }}</h1>
+    <a class="back-link" href="{% url 'branch-access' branch_id %}"><i class="bi bi-arrow-bar-left"></i></a>
+    <h1>Add access</h1>
 
     <form method="POST">
         {% csrf_token %}
