--- a/dispatcher_application/access_management/templates/access_management/add_user_branches.html
+++ b/dispatcher_application/access_management/templates/access_management/add_user_branches.html
@@ -18,7 +18,7 @@
         {% csrf_token %}
         {{ form.as_p }}
        
-        <input type="submit" class="" value="Save">
+        <input type="submit" class="" value="">
     </form>
     
 {% endblock %}
