--- a/dispatcher_application/templates/base_template.html
+++ b/dispatcher_application/templates/base_template.html
@@ -2,27 +2,44 @@
 <html lang="en">
 <head>
     <meta charset='utf-8'>
-    <title>{% block title %}{% endblock %}</title>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main_style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     
     {% block static_imports %}
         
     {% endblock %}
+    
+    <title>{% block title %}{% endblock %}</title>
 
 </head>
 
 
 <body>
+
+    {% include './logo_panel.html' %}
+
+    {% if True %}
+        {% include './navbar_superuser.html' %}
+    {% endif %}
     
     <div class="container">
         {% block content %} 
         
         {% endblock %}
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous">
+    </script>
 
 </body>
 </html>
