--- a/dispatcher_application/access_management/templates/access_management/group_main.html
+++ b/dispatcher_application/access_management/templates/access_management/group_main.html
@@ -1,4 +1,4 @@
-{% extends './base_template.html' %}
+{% comment %} {% extends './base_template.html' %}
 
 {% block content %}
 <br>
@@ -37,4 +37,4 @@
     </div>
   </div>
 </form>
-  {% endblock  %}
+  {% endblock  %} {% endcomment %}
