--- a/dispatcher_application/access_management/templates/access_management/test_temp.html
+++ b/dispatcher_application/access_management/templates/access_management/test_temp.html
@@ -1,4 +1,4 @@
-{% extends "base_template.html" %}
+{% comment %} {% extends "base_template.html" %}
 
 {% block title %}test{% endblock %}
 
@@ -13,4 +13,4 @@
         {% endfor %}
     </ul>
     
-{% endblock %}
+{% endblock %} {% endcomment %}
