--- a/dispatcher_application/access_management/templates/access_management/base_template.html
+++ b/dispatcher_application/access_management/templates/access_management/base_template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset='utf-8'>
@@ -50,4 +50,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html> {% endcomment %}
