--- a/dispatcher_application/access_management/templates/access_management/logo_panel.html
+++ b/dispatcher_application/access_management/templates/access_management/logo_panel.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+{% comment %} <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 col-3">
                 <img src="https://www.cevalogistics.com/images/ratio_267_x_large_picture/CEVA_Logo_LR-500-242.jpeg" alt="" height="64">
@@ -9,4 +9,4 @@
             </div>
         </div>
 
-</div>
+</div> {% endcomment %}
