--- a/dispatcher_application/access_management/templates/access_management/navbar_superuser.html
+++ b/dispatcher_application/access_management/templates/access_management/navbar_superuser.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+{% comment %} <div class="container-fluid">
     <div class="row">
         <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1">
             <a class="bi bi-person-fill btn btn-lg" style="font-size: 1.8rem;"></a>
@@ -14,4 +14,4 @@
         </form>
         </div>
     </div>
-</div>
+</div> {% endcomment %}
