--- a/dispatcher_application/templates/navbar_superuser.html
+++ b/dispatcher_application/templates/navbar_superuser.html
@@ -3,8 +3,8 @@
         <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1">
             <a class="bi bi-person-fill btn btn-lg" style="font-size: 1.8rem;"><i class="bi bi-plus-circle"></i></a>
             <a class="bi bi-person-plus-fill btn btn-lg" style="font-size: 1.8rem;"></a>
-            <a class="bi bi-people btn btn-lg" style="font-size: 1.8rem;" href="{% url 'groups' %}"></a>
-            <a class="bi bi-person-plus btn btn-lg" style="font-size: 1.8rem;" href="{% url 'add_group' %}"></a>
+            <a class="bi bi-people btn btn-lg" style="font-size: 1.8rem;" href=""></a>
+            <a class="bi bi-person-plus btn btn-lg" style="font-size: 1.8rem;" href=""></a>
         </div>
         
         <div class="col-xl-5 col-md-2 col-sm-1 col-4 p-1">
