--- a/dispatcher_application/authentication/templates/authentication/reset_password.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password.html
@@ -2,9 +2,13 @@
 
 {% block title %}Reset password{% endblock %}
 
+{% block nav %}
+    {% include 'navbar.html' %}
+{% endblock %}
+
 {% block content %}
-	<div class="base-class">
-		<a class="back-link" href="{% url 'login' %}"><i class="bi bi-arrow-bar-left"></i></a>
+	<div class="container" style="text-align: left;">
+		<a class="bi bi-arrow-bar-left" href="{% url 'login' %}"></a>
 		
 		<h3>Password reset</h3>
 		
