--- a/dispatcher_application/authentication/templates/authentication/reset_password_complete.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_complete.html
@@ -2,9 +2,13 @@
 
 {% block title %}Reset password{% endblock %}
 
-{% block content %}
+{% block nav %}
+    {% include 'navbar.html' %}
+{% endblock %}
 
-    <div class="base-class">
+{% block content %}
+    <br>
+    <div class="container" style="text-align: left;">
         <h3>Password reset complete</h3>
 
         <p>Your password has been set. You may go ahead and log in now.</p>
