--- a/dispatcher_application/access_management/templates/access_management/group_add.html
+++ b/dispatcher_application/access_management/templates/access_management/group_add.html
@@ -1,9 +1,19 @@
-{% extends './base_template.html' %}
+{% extends 'base_template.html' %}
+
+{% block nav %} 
+    {% include "navbar.html" %}
+{% endblock nav %}
 
 {% block content %}
-<br>
-<div class="form-group">
-        <div class="col-lg-5">
+<div class="row">
+    <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
+    <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'groups' %}"></a>
+</div>
+    <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1" style="text-align: center;"><h2>Add Group</h2></div>
+</div>
+
+<div class="container" style="text-align: left; padding: auto;">
+    <br>
     <form action="" method="POST">
         {% csrf_token %}
         {{form}}
@@ -11,5 +21,5 @@
         <input type="submit" name="Submit" value="Add Group">
     </form>
 </div>
-</div>
+
 {% endblock  %}
