--- a/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
@@ -2,9 +2,13 @@
 
 {% block title %}Reset password{% endblock %}
 
+{% block nav %}
+    {% include 'navbar.html' %}
+{% endblock %}
+
 {% block content %}
 
-	<div class="base-class">
+	<div class="container" style="text-align: left;">
 		<h3>Enter new password</h3>
 
         <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
