--- a/dispatcher_application/authentication/templates/authentication/reset_password_done.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_done.html
@@ -2,9 +2,13 @@
 
 {% block title %}Reset password{% endblock %}
 
+{% block nav %}
+    {% include 'navbar.html' %}
+{% endblock %}
+
 {% block content %}
 
-    <div class="base-class">
+    <div class="container" style="text-align: left;">
         <h3>Password reset sent</h3>
 
         <p>We’ve emailed you instructions for setting your password, 
