--- a/dispatcher_application/known_locations_management/templates/known_locations_management/location_add.html
+++ b/dispatcher_application/known_locations_management/templates/known_locations_management/location_add.html
@@ -2,15 +2,26 @@
 
 {% block title %}Add Location{% endblock %}
 
-{% block content %}
-    <a class="back-link" href="{% url 'location-list' %}"><i class="bi bi-arrow-bar-left"></i></a>
-    <h1>Add Location</h1>
+{% block nav %} 
+    {% include "navbar.html" %}
+{% endblock nav %}
 
+
+{% block content %}
+<div class="row">
+    <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
+    <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'location-list' %}"></a>
+    </div>
+    <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1" style="text-align: center;"><h2>Add Location</h2></div>
+</div>
+
+<div class="container" style="text-align: left; padding: auto;">
+    <br>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input class="" type="submit" value="Add">
     </form>
-
+</div>
 
 {% endblock %}
