--- a/dispatcher_application/user_management/templates/user_management/user_add.html
+++ b/dispatcher_application/user_management/templates/user_management/user_add.html
@@ -2,15 +2,24 @@
 
 {% block title %}Add user{% endblock %}
 
-
+{% block nav %} 
+    {% include "navbar.html" %}
+{% endblock nav %}
 
 {% block content %}
-    <a class="back-link" href="{% url 'user-list' %}"><i class="bi bi-arrow-bar-left"></i></a>
+<div class="row">
+    <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
+    <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}"></a>
+    </div>
+    <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1" style="text-align: center;"><h2>Add User</h2></div>
+</div>
 
+<div class="container" style="text-align: left; padding: auto;">
+    <br>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Add">
     </form>
-    
+</div>
 {% endblock %}
